MET-6739 remove Collections.UnmodifiableList and use List.CopyOf